<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.technoriti.DevelopersFragment"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/developerstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:text="@string/developers_text"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/back"
        android:textColor="#c6ff00"
        android:textSize="30sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developerstext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/pratyush_ranjan"
        android:textColor="#c6ff00"
        android:textSize="24sp"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/pratyush11197_gmail_com"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/_91_8405844311"
        android:textColor="#FFFFFF"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/sweta_rani"
        android:textColor="#c6ff00"
        android:textSize="24sp"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="8dp"
        android:text="@string/swetarani1110_gmail_com"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</RelativeLayout>
